Updated reusable compiler compatible with 25